@@ -38,6 +38,7 @@ tape_read_buffer( unsigned char *buffer, size_t length, libspectrum_id_t type,
 		  const char *filename, int autoload );
 
 int tape_close( void );
+int tape_rewind( void );
 int tape_select_block( size_t n );
 int tape_select_block_no_update( size_t n );
 int tape_get_current_block( void );
